<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">


    <!--    android:layout_marginTop="48sp"-->


    <ImageView
        android:id="@+id/imageView2"
        android:visibility="visible"
        android:layout_width="317dp"
        android:layout_height="213dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48sp"
        android:layout_marginBottom="24sp"
        android:contentDescription="@string/logo_description"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="16sp"
        app:boxStrokeColor="?attr/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"

            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="24sp"
        app:boxStrokeColor="?attr/colorPrimary"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16sp"
        android:backgroundTint="?attr/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_prompt"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="16sp" />


</LinearLayout>